# clang-tidy-target-cmake

./: .gitmodules  .travis.yml  CMakeLists.txt  ClangTidy.cmake  DEPENDENCIES  DICTIONARY  FindCLANGTIDY.cmake  FindClangTidy.cmake  PACKAGES.OSX.10.10  PACKAGES.Ubuntu.precise  README.md  REPOSITORIES.Ubuntu.precise  appveyor.yml  biicode.conf  conanfile.py
test/: CMakeLists.txt  ClangTidyAllowWarningsOption.cmake  ClangTidyAllowWarningsOptionVerify.cmake  ClangTidyCheckGeneratedFlag.cmake  ClangTidyCheckGeneratedFlagVerify.cmake  ClangTidyDisableChecks.cmake  ClangTidyDisableChecksVerify.cmake  ClangTidyEnableChecks.cmake  ClangTidyEnableChecksVerify.cmake  ClangTidyFatalErrorOnWarning.cmake  ClangTidyFatalErrorOnWarningVerify.cmake  ClangTidyGenerateSpecialCompilationDB.cmake  ClangTidyGenerateSpecialCompilationDBForRealTargetHeaders.cmake  ClangTidyGenerateSpecialCompilationDBForRealTargetHeadersVerify.cmake  ClangTidyGenerateSpecialCompilationDBVerify.cmake  ClangTidyNoCheckGenerated.cmake  ClangTidyNoCheckGeneratedVerify.cmake  ClangTidyOnTargetSources.cmake  ClangTidyOnTargetSourcesVerify.cmake  ClangTidySpecialCompilationDBCPlusPlusMarkerPassed.cmake  ClangTidySpecialCompilationDBCPlusPlusMarkerPassedVerify.cmake  ClangTidySpecialCompilationDBDefines.cmake  ClangTidySpecialCompilationDBDefinesVerify.cmake  ClangTidySpecialCompilationDBIncludes.cmake  ClangTidySpecialCompilationDBIncludesVerify.cmake  ClangTidySpecialCompilationDBUseCCompilerForCHeader.cmake  ClangTidySpecialCompilationDBUseCCompilerForCHeaderVerify.cmake  ClangTidySpecialCompilationDBUseCFlagsForCHeader.cmake  ClangTidySpecialCompilationDBUseCFlagsForCHeaderVerify.cmake  ClangTidySpecialCompilationDBUseCLanguageOptForCHeader.cmake  ClangTidySpecialCompilationDBUseCLanguageOptForCHeaderVerify.cmake  ClangTidySpecialCompilationDBUseCXXCompilerForCPPHeader.cmake  ClangTidySpecialCompilationDBUseCXXCompilerForCPPHeaderVerify.cmake  ClangTidySpecialCompilationDBUseCXXFlagsForCHeaderCPPIdentifiers.cmake  ClangTidySpecialCompilationDBUseCXXFlagsForCHeaderCPPIdentifiersVerify.cmake  ClangTidySpecialCompilationDBUseCXXFlagsForCHeaderForceLanguage.cmake  ClangTidySpecialCompilationDBUseCXXFlagsForCHeaderForceLanguageVerify.cmake  ClangTidySpecialCompilationDBUseCXXFlagsForCPPHeader.cmake  ClangTidySpecialCompilationDBUseCXXFlagsForCPPHeaderVerify.cmake  ClangTidySpecialCompilationDBUseCXXLanguageOptForCPPHeader.cmake  (+4 more)
util/: ClangTidyExitStatusWrapper.cmake
